--- a/style.css
+++ b/style.css
@@ -6,11 +6,149 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #363836;
     color: goldenrod;
     font-family: 'Bree Serif', serif;
 }
+
 header a {
     text-decoration: none;
+}
+
+/* header li {
+    list-style: none;
+} */
+
+header {
+    padding: 20px;
+    background-color: #1d1f1d;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#brand {
+    font-weight: bold;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+
+#brand a {
+    color: mediumturquoise;
+}
+
+ul {
+    list-style: none;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+}
+
+ul a {
+    color: white;
+}
+
+ul li {
+    padding: 2rem;
+    margin-left: 2rem;
+}
+
+ul li:hover {
+    transform: scale(1.2);
+    transition: 500ms;
+}
+
+#login,
+#signup {
+    border: 3px solid;
+    border-radius: 8px;
+    padding: 5px 8px;
+    align-items: center;
+}
+
+#login {
+    color: turquoise;
+}
+
+#signup {
+    color: red;
+}
+
+#login a {
+    color: turquoise;
+}
+
+#signup a {
+    color: red;
+}
+
+#hamburger-icon {
+    margin: auto 0;
+    display: none;
+    cursor: pointer;
+}
+
+#hamburger-icon div {
+    width: 35px;
+    height: 3px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 650ms;
+}
+
+.open .bar1 {
+    transform: rotate(-45deg) translate(-6px, 6px);
+    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+}
+
+.open .bar2 {
+    opacity: 0;
+}
+
+.open .bar3 {
+    -webkit-transform: rotate(45deg) translate(-6px, -8px);
+    transform: rotate(45deg) translate(-6px, -8px);
+}
+
+.open .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 1rem;
+
+}
+
+.mobile-menu {
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    height: calc(100vh -50px);
+    width: 100%;
+    justify-content: flex-start;
+}
+
+.mobile-menu li {
+    margin-bottom: 1rem;
+}
+
+@media (max-width: 600px) {
+    header {
+        height: 60px;
+    }
+
+    header nav {
+        display: none;
+    }
+
+    #hamburger-icon {
+        display: block;
+        transition: 1.5s;
+
+    }
 }
